adding Bexar work and today's PM data

--- a/Texas_COVID_1Jun20.ipynb
+++ b/Texas_COVID_1Jun20.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,25 +20,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 1596\r\n",
-      "drwxrwxrwx 1 ldhagen ldhagen   4096 Jun  1 16:18  .\r\n",
-      "-rw-rw-rw- 1 ldhagen ldhagen   2595 Jun  1 16:18  Texas_COVID_1Jun20.ipynb\r\n",
-      "-rwxrwxrwx 1 ldhagen ldhagen 101228 Jun  1 16:12 'Texas COVID-19 Case Count Data by County (1).xlsx'\r\n",
-      "drwxrwxrwx 1 ldhagen ldhagen   4096 Jun  1 15:25  ..\r\n",
-      "-rw-rw-rw- 1 ldhagen ldhagen  24433 Jun  1 15:21  rain_7days_1Jun20.ipynb\r\n",
-      "drwxrwxrwx 1 ldhagen ldhagen   4096 Jun  1 15:15  .ipynb_checkpoints\r\n",
-      "-rwxrwxrwx 1 ldhagen ldhagen 101228 Jun  1 15:15 'Texas COVID-19 Case Count Data by County.xlsx'\r\n",
-      "-rw-rw-rw- 1 ldhagen ldhagen  14426 Jun  1 14:52  ws_dam_180days_1Jun20.ipynb\r\n",
-      "-rwxrwxrwx 1 ldhagen ldhagen  51883 Jun  1 13:29  all_rain_gauges_7days_2020_06_01_13_04_20_CDT_1.csv\r\n",
-      "-rwxrwxrwx 1 ldhagen ldhagen 964704 Jun  1 13:14  ME097_WS_San_Geronimo_180_D_2020_06_01_13_03_25_CDT_1.csv\r\n",
-      "drwxrwxrwx 1 ldhagen ldhagen   4096 May 14 12:35  pydata-book\r\n"
+      "total 216\r\n",
+      "drwxrwxrwx 1 ldhagen ldhagen   4096 Jun  2 13:41  .\r\n",
+      "-rw-rw-rw- 1 ldhagen ldhagen   6318 Jun  2 13:41  Texas_COVID_1Jun20-TestNumbers.ipynb\r\n",
+      "-rw------- 1 ldhagen ldhagen   4436 Jun  2 13:41  nohup.out\r\n",
+      "-rwxrwxrwx 1 ldhagen ldhagen  71515 Jun  2 13:34 'Cumulative Tests over Time by County.xlsx'\r\n",
+      "drwxrwxrwx 1 ldhagen ldhagen   4096 Jun  2 13:27  .ipynb_checkpoints\r\n",
+      "-rw-rw-rw- 1 ldhagen ldhagen  11796 Jun  2 13:27  Texas_COVID_1Jun20.ipynb\r\n",
+      "-rw-rw-rw- 1 ldhagen ldhagen     72 Jun  2 13:22  Untitled.ipynb\r\n",
+      "drwxrwxrwx 1 ldhagen ldhagen   4096 Jun  2 13:18  .git\r\n",
+      "drwxrwxrwx 1 ldhagen ldhagen   4096 Jun  1 16:48  ..\r\n",
+      "-rw-rw-rw- 1 ldhagen ldhagen     99 Jun  1 16:47  README.md\r\n",
+      "-rwxrwxrwx 1 ldhagen ldhagen 101228 Jun  1 16:12 'Texas COVID-19 Case Count Data by County (1).xlsx'\r\n"
      ]
     }
    ],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,15 +65,39 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      Anderson\n",
+       "1       Andrews\n",
+       "2      Angelina\n",
+       "3       Aransas\n",
+       "4        Archer\n",
+       "         ...   \n",
+       "249        Wood\n",
+       "250      Yoakum\n",
+       "251       Young\n",
+       "252      Zapata\n",
+       "253      Zavala\n",
+       "Name: County Name, Length: 254, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c['County Name'][0:254]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +117,7 @@
        "Name: 254, Length: 86, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
