removing warning on xsls processing

--- a/Bexar Active New Texas Format.ipynb
+++ b/Bexar Active New Texas Format.ipynb
@@ -22,16 +22,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2021-08-30 16:53:42--  https://dshs.texas.gov/coronavirus/TexasCOVID-19ActiveCaseDatabyCounty.xlsx\n",
+      "--2021-08-31 14:38:45--  https://dshs.texas.gov/coronavirus/TexasCOVID-19ActiveCaseDatabyCounty.xlsx\n",
       "Resolving dshs.texas.gov (dshs.texas.gov)... 52.26.98.234\n",
       "Connecting to dshs.texas.gov (dshs.texas.gov)|52.26.98.234|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 244514 (239K) [application/vnd.openxmlformats-officedocument.spreadsheetml.sheet]\n",
       "Saving to: ‘TexasCOVID-19ActiveCaseDatabyCounty.xlsx’\n",
       "\n",
-      "TexasCOVID-19Active 100%[===================>] 238.78K   981KB/s    in 0.2s    \n",
+      "TexasCOVID-19Active 100%[===================>] 238.78K   705KB/s    in 0.3s    \n",
       "\n",
-      "2021-08-30 16:53:43 (981 KB/s) - ‘TexasCOVID-19ActiveCaseDatabyCounty.xlsx’ saved [244514/244514]\n",
+      "2021-08-31 14:38:46 (705 KB/s) - ‘TexasCOVID-19ActiveCaseDatabyCounty.xlsx’ saved [244514/244514]\n",
       "\n"
      ]
     }
@@ -1737,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1771,6 +1771,15 @@
     "plt.legend(['7 Day Rolling Average','Daily Active Cases'])\n",
     "plt.title('Bexar County Active COVID19 Estimated Cases From DSHS Texas Their New Format')\n",
     "plt.savefig('BexarTotal.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "?plt.legend"
    ]
   },
   {
