--- a/Bexar Active New Texas Format.ipynb
+++ b/Bexar Active New Texas Format.ipynb
@@ -22,16 +22,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2021-08-31 14:38:45--  https://dshs.texas.gov/coronavirus/TexasCOVID-19ActiveCaseDatabyCounty.xlsx\n",
+      "--2021-08-31 15:39:11--  https://dshs.texas.gov/coronavirus/TexasCOVID-19ActiveCaseDatabyCounty.xlsx\n",
       "Resolving dshs.texas.gov (dshs.texas.gov)... 52.26.98.234\n",
       "Connecting to dshs.texas.gov (dshs.texas.gov)|52.26.98.234|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 244514 (239K) [application/vnd.openxmlformats-officedocument.spreadsheetml.sheet]\n",
-      "Saving to: ‘TexasCOVID-19ActiveCaseDatabyCounty.xlsx’\n",
+      "Saving to: ‘TexasCOVID-19ActiveCaseDatabyCounty.xlsx.3’\n",
       "\n",
-      "TexasCOVID-19Active 100%[===================>] 238.78K   705KB/s    in 0.3s    \n",
+      "TexasCOVID-19Active 100%[===================>] 238.78K   792KB/s    in 0.3s    \n",
       "\n",
-      "2021-08-31 14:38:46 (705 KB/s) - ‘TexasCOVID-19ActiveCaseDatabyCounty.xlsx’ saved [244514/244514]\n",
+      "2021-08-31 15:39:13 (792 KB/s) - ‘TexasCOVID-19ActiveCaseDatabyCounty.xlsx.3’ saved [244514/244514]\n",
       "\n"
      ]
     }
@@ -46,21 +46,30 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ipython-input-3-16047a64001c>:1: FutureWarning: Your version of xlrd is 1.2.0. In xlrd >= 2.0, only the xls format is supported. As a result, the openpyxl engine will be used if it is installed and the engine argument is not specified. Install openpyxl instead.\n",
-      "  df_Texas_Covid_case = pd.read_excel(\"./TexasCOVID-19ActiveCaseDatabyCounty.xlsx\",header=2)\n"
+      "Requirement already satisfied: openpyxl in /home/ldhagen/.local/lib/python3.8/site-packages (3.0.7)\r\n",
+      "Requirement already satisfied: et-xmlfile in /home/ldhagen/.local/lib/python3.8/site-packages (from openpyxl) (1.1.0)\r\n"
      ]
     }
    ],
    "source": [
-    "df_Texas_Covid_case = pd.read_excel(\"./TexasCOVID-19ActiveCaseDatabyCounty.xlsx\",header=2)"
+    "!pip3 install openpyxl"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_Texas_Covid_case = pd.read_excel(\"./TexasCOVID-19ActiveCaseDatabyCounty.xlsx\",header=2,  engine='openpyxl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +128,7 @@
        "Name: Bexar, Length: 264, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +157,7 @@
        "      dtype='object', length=264)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +188,7 @@
        "Name: Bexar, Length: 263, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +208,7 @@
        "'12-11'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -1311,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1591,7 @@
        " datetime.datetime(2021, 8, 30, 0, 0): 24070.0}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1593,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1602,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1708,7 +1717,7 @@
        "[263 rows x 2 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1719,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1728,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1737,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1771,15 +1780,6 @@
     "plt.legend(['7 Day Rolling Average','Daily Active Cases'])\n",
     "plt.title('Bexar County Active COVID19 Estimated Cases From DSHS Texas Their New Format')\n",
     "plt.savefig('BexarTotal.png')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "?plt.legend"
    ]
   },
   {
