--- a/San Antonio ICU Per DSHS.ipynb
+++ b/San Antonio ICU Per DSHS.ipynb
@@ -21,16 +21,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2021-08-31 16:27:43--  https://dshs.texas.gov/coronavirus/CombinedHospitalDataoverTimebyTSA.xlsx\n",
+      "--2021-09-07 16:56:36--  https://dshs.texas.gov/coronavirus/CombinedHospitalDataoverTimebyTSA.xlsx\n",
       "Resolving dshs.texas.gov (dshs.texas.gov)... 52.26.98.234\n",
       "Connecting to dshs.texas.gov (dshs.texas.gov)|52.26.98.234|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 605615 (591K) [application/vnd.openxmlformats-officedocument.spreadsheetml.sheet]\n",
-      "Saving to: ‘CombinedHospitalDataoverTimebyTSA.xlsx.1’\n",
+      "Length: 785101 (767K) [application/vnd.openxmlformats-officedocument.spreadsheetml.sheet]\n",
+      "Saving to: ‘CombinedHospitalDataoverTimebyTSA.xlsx.8’\n",
       "\n",
-      "CombinedHospitalDat 100%[===================>] 591.42K  1.14MB/s    in 0.5s    \n",
+      "CombinedHospitalDat 100%[===================>] 766.70K   508KB/s    in 1.5s    \n",
       "\n",
-      "2021-08-31 16:27:44 (1.14 MB/s) - ‘CombinedHospitalDataoverTimebyTSA.xlsx.1’ saved [605615/605615]\n",
+      "2021-09-07 16:56:39 (508 KB/s) - ‘CombinedHospitalDataoverTimebyTSA.xlsx.8’ saved [785101/785101]\n",
       "\n"
      ]
     }
@@ -1946,17 +1946,17 @@
       "2021-07-29\n",
       "2021 7 29\n",
       "2021-07-30\n",
-      "2021 7 30\n"
+      "2021 7 30\n",
+      "2021-07-31\n",
+      "2021 7 31\n",
+      "2021-08-01\n",
+      "2021 8 1\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-07-31\n",
-      "2021 7 31\n",
-      "2021-08-01\n",
-      "2021 8 1\n",
       "2021-08-02\n",
       "2021 8 2\n",
       "2021-08-03\n",
